--- a/src/dotnet/APIView/APIViewWeb/Client/package.json
+++ b/src/dotnet/APIView/APIViewWeb/Client/package.json
@@ -11,22 +11,23 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "jquery": "3.4.1",
+    "jquery": "3.6.0",
     "split.js": "^1.5.11",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "acorn": "^8.0.0"
   },
   "devDependencies": {
     "@types/jquery": "3.3.31",
     "@types/split.js": "^1.4.0",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/parser": "2.5.0",
+    "@typescript-eslint/parser": "5.16.0",
     "css-loader": "^3.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "ts-loader": "^6.2.0",
@@ -34,8 +35,8 @@
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "eslintConfig": {
     "root": true,
