[mock-attestation] - Update node-jose (#2959)
## What

- Bump the min-version of node-jose to 2.1.0 as the min-version
- Remove the maa-ehd field

## Why

- Fixes a few vulnerabilities in our dependency tree (mainly identified
vulnerabilities in node-forge < 1.0.0)
- maa-ehd is not necessary and if supplied we shouldn't just put any string in
there. While not harmful for our tests, it's not correct either.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,3 +26,4 @@
 /tools/mock-service-host/        @changlong-liu @tadelesh
 /tools/sdk-testgen/              @changlong-liu @tadelesh
 /tools/js-sdk-release-tools/     @dw511214992 @qiaozha @MaryGao
+/tools/keyvault-mock-attestation @maorleger
